fix position of send icon on iphone screens
[#160700796]

--- a/app/assets/stylesheets/molecules/_sendbar.scss
+++ b/app/assets/stylesheets/molecules/_sendbar.scss
@@ -37,6 +37,7 @@
       }
       @supports(-webkit-overflow-scrolling: touch) {
         margin-left: -30px;
+        margin-right: -40px;
       }
     }
     #send_message, #send_later {
